# quickstats-django

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  Procfile  README.md  app.json  circle.yml  docker-compose.yml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: django.yml
docker/: docker-entrypoint.sh  docker.env  requirements.txt
quickstats/: __init__.py  admin.py  apps.py  client.py  forms.py  grafana.py  models.py  permissions.py  prometheus.py  rest.py  serializers.py  shortcuts.py  signals.py  tasks.py  urls.py  views.py
quickstats/management/commands/: scrape.py
quickstats/migrations/: 0001_initial.py  0002_scrape.py  0003_widget_body_optional.py  0004_waypoint_states.py  0005_share.py  0006_scrape_owner.py  0007_longer_url.py  0008_longer_more_url.py  0009_delete_comment.py  0010_cron_period.py
quickstats/scrape/: __init__.py  calendar.py
quickstats/standalone/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
quickstats/templates/: base.html  navbar.inc.html
quickstats/templates/quickstats/: chart_list.html  comment_list.html  countdown_list.html  embed_code.html  location_list.html  paginator.html  public.html  sample_list.html  scrape_list.html  share_list.html  streak_list.html  subscription_list.html  user.html  waypoint_list.html  widget_card.html  widget_confirm_delete.html  widget_detail.html  widget_embed.html  widget_form.html  widget_list.html  widget_row.inc.html  widget_update_form.html
quickstats/templates/rest_framework/: api.html
quickstats/templatetags/: quickstats.py
quickstats/tests/: grafana.annotation.json  metrics.prom  test_grafana.py  test_prometheus.py  test_query.py  test_samples.py  test_waypoints.py
quickstats/widget/: chart.py
simplestats/: admin.py  apps.py  constants.py  context_processors.py  feed.py  grafana.py  models.py  numerous.py  permissions.py  prometheus.py  requests.py  rest.py  serializers.py  shortcuts.py  urls.py  views.py
simplestats/management/commands/: collect.py  merge_chart.py  numerous.py  scrape.py
simplestats/migrations/: 0001_initial.py  0002_countdown.py  0003_auto_20160208_1042.py  0004_countdown_calendar.py  0005_auto_20160208_1153.py  0006_chart.py  0007_auto_20160211_1134.py  0008_countdown_uuid.py  0009_countdown_meta.py  0010_countdown_public.py  0011_countdown_icon.py  0012_auto_20160321_0321.py  0013_auto_20160321_0326.py  0014_countdown_description.py  0015_report.py  0016_report_name.py  0017_remove_report_owner.py  0018_auto_20160508_0608.py  0019_auto_20160508_0610.py  0020_auto_20160515_0125.py  0021_annotation.py  0022_token.py  0023_auto_20160718_0024.py  0024_auto_20160723_0118.py  0025_countdown_more.py  0026_auto_20160728_1340.py  0027_auto_20160728_1420.py  0028_auto_20160728_1425.py  0029_auto_20160925_0436.py  0030_report_owner.py  0031_location.py  0032_movement.py  0033_auto_20170102_0856.py  0034_delete_token.py  0035_auto_20170108_0727.py  0036_movement_note.py  0037_chart_unit.py  0038_auto_20170813_0811.py  0039_data.py  0040_auto_20170902_0400.py  (+5 more)
simplestats/plugins/: countdown.py  currency.py  forecast.py  wanikani.py
simplestats/prometheus/: urls.py  views.py
simplestats/signals/: __init__.py  location.py  pomodoro.py
simplestats/standalone/: __init__.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
simplestats/standalone/templates/: base.html
simplestats/tasks/: __init__.py  chart.py  countdown.py  currency.py  feedly.py  forecast.py  github.py  owntracks.py  pocket.py  prometheus.py  reports.py  rescuetime.py  utility.py  wanikani.py
simplestats/templates/: base.html  location_timeline.html  navbar.inc.html
simplestats/templatetags/: simplestats.py
simplestats/tests/: grafana.query.json  grafana.search.json  metrics.prom  owntracks.enter.json  owntracks.exit.json  test.prom  test_grafana.py  test_ifttt.py  test_owntracks.py  test_prometheus.py  test_quick_record.py
simplestats/views/: __init__.py  grafana.py  pocket.py
(+50 files in other folders)
