[metadata]
name = quickstats-django
version = attr:quickstats.version.__VERSION__
license = MIT License
description = A simple stats package
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/quickstats/quickstats-django
author = Paul Traylor
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP
project_urls =
    Source = https://github.com/quickstats/quickstats-django
    Tracker = https://github.com/quickstats/quickstats-django/issues

[options]
packages = find:
include_package_data = True
install_requires =
    django-filter
    celery
    Django>=2.0
    djangorestframework-csv
    djangorestframework
    drf-nested-routers
    icalendar
    pillow>=6.2.2
    python-dateutil
    pytz
    requests

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    quickstats = quickstats.standalone.manage:main
quickstats.scrape =
    calendar = quickstats.scrape.calendar:CalendarScraper
    atom = quickstats.scrape.atom:AtomScraper
quickstats.widget =
    chart = quickstats.widget.chart:ChartWidget
    countdown = quickstats.widget.countdown:CountdownWidget
    location = quickstats.widget.location:LocationWidget
    streak = quickstats.widget.streak:StreakWidget

[options.extras_require]
standalone =
    celery==4.3.0
    django-environ
    prometheus-client
    sentry_sdk
dev =
    black
    flake8
    psycopg2-binary

[isort]
forced_separate = django,quickstats
known_django = django
known_first_party = quickstats
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
ignore = E501
