[metadata]
name = quickstats-django
version = attr:quickstats.version.__VERSION__
description = A simple stats package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quickstats/quickstats-django
author = Paul Traylor
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
project_urls =
    Source = https://github.com/quickstats/quickstats-django
    Tracker = https://github.com/quickstats/quickstats-django/issues

[options]
packages = find:
install_requires =
    Django>=3.2
    celery
    django-filter
    django-zakka>=0.4.0
    djangorestframework
    djangorestframework-csv
    drf-nested-routers
    icalendar
    pillow
    python-dateutil
    pytz
    requests
    importlib-metadata;python_version<"3.10"
python_requires = >=3.8
include_package_data = True

[options.packages.find]
exclude = test

[options.entry_points]
console_scripts =
    quickstats = quickstats.standalone.manage:main
quickstats.scrape =
    calendar = quickstats.scrape.calendar:CalendarScraper
    atom = quickstats.scrape.atom:AtomScraper

[options.extras_require]
dev =
    black
    flake8
    psycopg2-binary==2.8.6
standalone =
    celery[redis]
    django-environ
    prometheus-client
    sentry-sdk

[isort]
forced_separate = django,quickstats
known_django = django
known_first_party = quickstats
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
ignore = E501
